# JetsonNano-MTP-enabled-compute-cluster

./: .gitignore  LICENSE  Nano Work Plan.md  Nano Work Plan_Instructions.md  README.md  sonar-project.properties
.memories/: STATUS_2026-07-13.md
ClusterVerify/: cluster_shutdown.sh  conn.txt  dbus_session.conf  dbus_system.conf  dbuscfg.sh  dbuscompare.sh  dbusd_PolicyKit1.conf  dbusd_UbuntuAdvantage.conf  dbusd_bolt.conf  dbusd_fwupd.conf  dbusd_netplan.conf  dbusdiag.sh  dbusfix.sh  dbusfix2.sh  dbusfix3.sh  dbusnet.sh  dbusscan.sh  dbusstate.sh  diag.ps1  diag.sh  diag_log.txt  diag_net_node0.py  diag_sec_node0.py  diag_ssh_node0.py  findsshd.ps1  findsshd.sh  findsshd_log.txt  fixnet.ps1  fixnet.sh  fixnet_log.txt  fsck.ps1  fsck.sh  fsck_log.txt  harden_node.py  img_service_check.sh  imgcheck.sh  imgdbus.sh  imgdbus2.sh  imgdbus3.sh  imgfsck.sh  (+61 more)
Docs/: Adjusting Model Temperature in llama.md  Alllocator _ Load balancer.md  Anti-Dark-Forest-Project.md  BUILD_RECIPE_PROVEN_b56f079e2.md  Corruption checks.txt  DISKPART commands.txt  ENSEMBLE_DESIGN.md  MTP CUDA Enablement Work Plan.md  MTP_CUDA_STATUS.md  Models.docx  More tests for the small models.md  Prewarm script for SSD models.md  QoS type thoughts for GH copilot.txt  Refinements.md  Repair or toss.txt  Resize linux image.md  _headscan.txt  (+19 more)
code/nat_skills/: pyproject.toml
code/nat_skills/cluster_nat_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code/nat_skills/configs/: shared_skills.yml
code/nat_skills/skills/: __init__.py  phase2_methods.py  recursive_entropy.py  register.py
(+474 files in other folders)
